--- a/clase 7_1.html
+++ b/clase 7_1.html
@@ -7,9 +7,8 @@
     <meta http-equiv="X-UA-COMPATIBLE" content="ie=edge">
     <title>Platzi Video</title>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet">
-</HEAD>
 <style>
-    body {
+  body {
     margin: 0px;
     font-family: 'Muli', sans-serif;
     background-color: #AB88FF;
@@ -67,19 +66,19 @@
     color: white;
   }
 </style>
-<BODY>
-    <header class="header">
-    	<img class="header__img" src="./BW2.png" alt="Platzi Video">
-    	<div class="header__menu">
-        	<div class="header__menu--profile">
-            	<img src="./naturaluser.png" alt="User">
-                <p>Perfil</p>
-            </div>
-            <ul>
-        		<li><a href="./">Cuenta</li>
-            	<li><a href="./">Cerrar Sesión</li>
-        	</ul>	
-        </div>
-    </header>
-</BODY>
-</HTML>
+<body>
+  <header class="header">
+    <img class="header__img" src="./BW2.png" alt="Platzi Video">
+    <div class="header__menu">
+      <div class="header__menu--profile">
+        <img src="./naturaluser.png" alt="User">
+        <p>Perfil</p>
+      </div>
+      <ul>
+        <li><a href="/">Cuenta</a></li>
+        <li><a href="/">Cerrar Sesión</a></li>
+      </ul>
+    </div>
+  </header>
+</body>
+</html>
