--- a/clase 7.html
+++ b/clase 7.html
@@ -68,18 +68,18 @@
   }
 </style>
 <BODY>
-    <header class="header">
-    	<img class="header__img" src="./BW2.png" alt="Platzi Video">
-    	<div class="header__menu">
-        	<div class="header__menu--profile">
-            	<img src="./naturaluser.png" alt="User">
-                <p>Perfil</p>
-            </div>
-            <ul>
-        		<li><a href="./">Cuenta</li>
-            	<li><a href="./">Cerrar Sesión</li>
-        	</ul>	
-        </div>
-    </header>
+  <header class="header">
+  <img class="header__img" src="./BW2.png" alt="Platzi Video">
+  <div class="header__menu">
+     <div class="header__menu--profile">
+        <img src="./naturaluser.png" alt="User">
+        <p>Perfil</p>
+      </div>
+     <ul>
+        <li><a href="./">Cuenta</a></li>
+        <li><a href="./">Cerrar Sesión</a></li>
+     </ul>	
+     </div>
+  </header>
 </BODY>
 </HTML>
