--- a/clase8carrusel.html
+++ b/clase8carrusel.html
@@ -23,7 +23,7 @@
 	  margin: 70px 0px; /*arriba y abajo , laterales*/
 	  padding-bottom:10px;
   }
-  .carousel__item{
+  .carousel-item{
 	background-color: palevioletred;
     width: 200px;
     height: 250px;
@@ -34,24 +34,58 @@
     cursor: pointer;
     transition: 450ms all;
     transform-origin: center left;
+	position:relative;
   }
-  .carousel__item: hover ~ .carousel__item{
+  .carousel-item: hover ~ .carousel-item{
 	  transform: translate3d(100px,0,0);
   }
-  .carousel__container:hover .carousel__item{
+  .carousel__container:hover .carousel-item{
 	  opacity:0.3;
   }
-  .carousel__container:hover .carousel__item:hover {
+  .carousel__container:hover .carousel-item:hover {
     transform: scale(1.2);
     opacity: 1;
   }
+  .carousel-item__img{
+	  width:200px;
+	  height:250px;
+	  object-fit: cover;
+  }
+  .carousel-item__details{
+	  background: linear-gradient(to top,rgba(0,0,0,0.9)0%, rgba(0,0,0)100%)
+	  font-size:5px;
+	  opacity: 0;
+	  transition: 450ms opacity;
+	  padding:10px;
+	  position:absolute;
+	  top:0;
+	  left:0;
+	  right:0;
+	  bottom:0;
+  }
+  .carousel-item__details:hover {
+        opacity: 1;
+        color: white;
+    }
+	.carousel-item__details img{
+		width:15px;
+	}
 </style>
 <BODY>
   <section class="carousel">
       <div class="carousel__container">
-          <div class="carousel__item">
+          <div class="carousel-item">
+          <img class="carousel-item__img" src="https://images.pexels.com/photos/4864565/pexels-photo-4864565.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="vista">
+          	<div class="carousel-item__details">
+                <div>
+                    <img src="iconsplay.png" alt="play">
+                    <img src="iconsmas.png" alt="agregar">
+                </div>
+              <p class="carousel-item__details--title">Titulo descriptivo</p>
+                <p class="carousel-item__details--subtitle">2016 + 19min</p>
+            </div>
           </div>
-          <div class="carousel__item">
+          <div class="carousel-item">
           </div>
       </div>
   </section>
